--- a/about.Rmd
+++ b/about.Rmd
@@ -81,26 +81,26 @@ You can download my **full CV** with the following links:
 library(tidyverse)
 library(plotly)
 
-df <- data.frame(Skill = c("ERP", "Complexity", "Time/Frequency", "Source Reconstruction", 
-                      "fMRI", "Connectivity",
-                      "EDA", "ECG", "EMG", "BVP/PPG",
-                      "Mixed-Modelling", "Bayesian Analyses", "Structural Equation Modelling", "Multivariate Statistics",
-                      "R", "Python", "Matlab", "Julia"), 
+df <- data.frame(Skill = c("ERP", "Complexity", "Time / Frequency", "Source Reconstruction", 
+                           "Functional MRI", "Structural MRI", "Connectivity",
+                           "EDA", "ECG", "EMG", "BVP / PPG",
+                           "Mixed-Modelling", "Bayesian Analyses", "Structural Equation Modelling", "Machine Learning", "Network Theory",
+                           "R", "Python", "Matlab", "Julia"), 
            Efficiency = c(100, 80, 75, 40, 
-                          30, 15,
-                          100, 100, 100, 90,
-                          100, 90, 95, 95,
+                          30, 20, 15,
+                          100, 100, 100, 100,
+                          100, 100, 95, 90, 50,
                           100, 100, 80, 70),
            Area = c("EEG", "EEG", "EEG", "EEG",
-                       "MRI", "MRI",
-                       "Biosignals", "Biosignals", "Biosignals", "Biosignals",
-                    "Statistics", "Statistics", "Statistics", "Statistics",
+                    "MRI", "MRI", "MRI",
+                    "Biosignals", "Biosignals", "Biosignals", "Biosignals",
+                    "Statistics", "Statistics", "Statistics", "Statistics", "Statistics",
                     "Programming", "Programming", "Programming", "Programming")) %>% 
-  mutate(Skill = factor(Skill, levels=c("EDA", "ECG", "EMG", "BVP/PPG",
-                                        "ERP", "Complexity", "Time/Frequency", "Source Reconstruction", 
-                      "fMRI", "Connectivity",
-                      "Mixed-Modelling", "Bayesian Analyses", "Structural Equation Modelling", "Multivariate Statistics",
-                      "R", "Python", "Matlab", "Julia")),
+  mutate(Skill = factor(Skill, levels=c("EDA", "ECG", "EMG", "BVP / PPG",
+                                        "ERP", "Complexity", "Time / Frequency", "Source Reconstruction", 
+                                        "Functional MRI", "Structural MRI", "Connectivity",
+                                        "Mixed-Modelling", "Bayesian Analyses", "Structural Equation Modelling", "Machine Learning", "Network Theory",
+                                        "R", "Python", "Matlab", "Julia")),
          Area = factor(Area, levels=c("Biosignals", "EEG", "MRI", "Statistics", "Programming")),
          Efficiency = as.numeric(Efficiency))
 
@@ -109,21 +109,26 @@ p <- ggplot(df, aes(y=Efficiency, x=Skill, fill=Area, label=Skill)) +
   geom_bar(stat = "identity", color = "white") +
   # geom_text(position = "stack", check_overlap=T) +
   theme_minimal() +
+  coord_flip() +
   # theme(axis.text.x = element_text(angle = -20, hjust=1)) +
   # theme(axis.text.x = element_text(hjust=1)) +
   # xlab("") +
-  coord_flip() +
+  
   # coord_polar() +
   scale_fill_manual(values=c("#E91E63", "#2196F3", "#4CAF50", "#FFC107", "#FF5722")) +
+  scale_y_continuous(breaks = NULL) +
   theme(axis.title.y=element_blank(),
         # axis.text.y=element_blank(),
-        # axis.ticks.y=element_blank()
+        panel.background = element_blank(),
+        # axis.ticks.y=element_blank(),
         axis.title.x=element_blank(),
-        axis.text.x=element_blank(),
-        axis.ticks.x=element_blank()
-        )
+        axis.text.x=element_blank()
+        # axis.ticks.x=element_blank(),
+        ) + 
+  guides(fill = guide_legend(reverse=T))
 
 p
+ggsave("Efficiency.png", p, dpi=300, height=4, width=8)
 # plotly::ggplotly(p)
 # as_widget(ggplotly(p))
 ```
