--- a/publication/ludecke2019insight/cite.bib
+++ b/publication/ludecke2019insight/cite.bib
@@ -1,4 +1,5 @@
 @article{ludecke2019insight,
+  doi = {10.21105/joss.01412},
   title={Insight: A unified interface to access information from model objects in R},
   author={L{\"u}decke, Daniel and Waggoner, Philip and Makowski, Dominique},
   journal={Journal of Open Source Software},
