--- a/publication/makowski2018psycho/cite.bib
+++ b/publication/makowski2018psycho/cite.bib
@@ -1,4 +1,5 @@
 @article{makowski2018psycho,
+  doi={10.21105/joss.00470},
   title={The psycho Package: an Efficient and Publishing-Oriented Workflow for Psychological Science.},
   author={Makowski, Dominique},
   journal={J. Open Source Software},
