--- a/publication/makowski2019heart/cite.bib
+++ b/publication/makowski2019heart/cite.bib
@@ -1,4 +1,5 @@
 @article{makowski2019heart,
+  doi = {10.1111/psyp.13490},
   title={The heart of cognitive control: Cardiac phase modulates processing speed and inhibition},
   author={Makowski, Dominique and Sperduti, Marco and Blond{\'e}, Philippe and Nicolas, Serge and Piolino, Pascale},
   journal={Psychophysiology},
