--- a/publication/nicolas2017centenaire/cite.bib
+++ b/publication/nicolas2017centenaire/cite.bib
@@ -1,4 +1,5 @@
 @article{nicolas2017centenaire,
+  doi = {10.3917/bupsy.549.0163},
   title={Centenaire Ribot (premi{\`e}re partie). La r{\'e}ception de l’{\oe}uvre de Th{\'e}odule Ribot publi{\'e}e chez l’{\'e}diteur Ladrange (1870-1873)},
   author={Nicolas, Serge and Makowski, Dominique},
   journal={Bulletin de psychologie},
