--- a/publication/sperduti2016protective/cite.bib
+++ b/publication/sperduti2016protective/cite.bib
@@ -1,4 +1,5 @@
 @article{sperduti2016protective,
+  doi = {10.1080/13825585.2016.1159652},
   title={The protective role of long-term meditation on the decline of the executive component of attention in aging: a preliminary cross-sectional study},
   author={Sperduti, Marco and Makowski, Dominique and Piolino, Pascale},
   journal={Aging, Neuropsychology, and Cognition},
