--- a/publication/sperduti2017distinctive/cite.bib
+++ b/publication/sperduti2017distinctive/cite.bib
@@ -1,4 +1,5 @@
 @article{sperduti2017distinctive,
+  doi = {10.1016/j.actpsy.2016.12.001},
   title={The distinctive role of executive functions in implicit emotion regulation},
   author={Sperduti, Marco and Makowski, Dominique and Arcangeli, Margherita and Wantzen, Prany and Zalla, Tiziana and Lemaire, Stephane and Dokic, Jerome and Pelletier, Jerome and Piolino, Pascale},
   journal={Acta psychologica},
