--- a/publication/sperduti2017interaction/cite.bib
+++ b/publication/sperduti2017interaction/cite.bib
@@ -1,4 +1,5 @@
 @article{sperduti2017interaction,
+  doi = {10.1007/s00221-017-5081-6},
   title={Interaction between attentional systems and episodic memory encoding: the impact of conflict on binding of information},
   author={Sperduti, Marco and Armougum, Allan and Makowski, Dominique and Blond{\'e}, Philippe and Piolino, Pascale},
   journal={Experimental brain research},
