--- a/publication/sperduti2017meditation/cite.bib
+++ b/publication/sperduti2017meditation/cite.bib
@@ -1,4 +1,5 @@
 @article{sperduti2017meditation,
+  doi = {10.1684/pnv.2017.0672},
   title={Meditation and successful aging: can meditative practices counteract age-related cognitive decline?},
   author={Sperduti, Marco and Makowski, Dominique and Blonde, Philippe and Piolino, Pascale},
   journal={Geriatrie et psychologie neuropsychiatrie du vieillissement},
