--- a/publication/makowski2015emotion/cite.bib
+++ b/publication/makowski2015emotion/cite.bib
@@ -1,5 +1,6 @@
 @article{makowski2015emotion,
   title={Emotion regulation and the cognitive decline in aging: beyond the paradox},
+  doi={10.1684/pnv.2015.0561},
   author={Makowski, Dominique and Sperduti, Marco and Blanchet, Sophie and Nicolas, Serge and Piolino, Pascale},
   journal={Geriatrie et psychologie neuropsychiatrie du vieillissement},
   volume={13},
