--- a/publication/makowski2017being/cite.bib
+++ b/publication/makowski2017being/cite.bib
@@ -1,5 +1,6 @@
 @article{makowski2017being,
   title={“Being there” and remembering it: Presence improves memory encoding},
+  doi={10.1016/j.concog.2017.06.015},
   author={Makowski, Dominique and Sperduti, Marco and Nicolas, Serge and Piolino, Pascale},
   journal={Consciousness and cognition},
   volume={53},
