--- a/publication/makowski2017neuropsydia/cite.bib
+++ b/publication/makowski2017neuropsydia/cite.bib
@@ -1,4 +1,5 @@
 @article{makowski2017neuropsydia,
+  doi={10.21105/joss.00259},
   title={Neuropsydia. py: A Python Module for Creating Experiments, Tasks and Questionnaires.},
   author={Makowski, Dominique and Dutriaux, L{\'e}o},
   journal={J. Open Source Software},
