--- a/publication/makowski2019bayestestr/cite.bib
+++ b/publication/makowski2019bayestestr/cite.bib
@@ -1,4 +1,5 @@
 @article{makowski2019bayestestr,
+  doi={10.21105/joss.01541},
   title={bayestestR: Describing effects and their uncertainty, existence and significance within the Bayesian framework},
   author={Makowski, Dominique and Ben-Shachar, Mattan and L{\"u}decke, Daniel},
   journal={Journal of Open Source Software},
