--- a/publication/makowski2019dispositional/cite.bib
+++ b/publication/makowski2019dispositional/cite.bib
@@ -1,4 +1,5 @@
 @article{makowski2019dispositional,
+  doi = {10.1016/j.concog.2018.11.004},
   title={Dispositional mindfulness attenuates the emotional attentional blink},
   author={Makowski, Dominique and Sperduti, Marco and Lavall{\'e}e, Samantha and Nicolas, Serge and Piolino, Pascale},
   journal={Consciousness and cognition},
