--- a/publication/makowski2019phenomenal/cite.bib
+++ b/publication/makowski2019phenomenal/cite.bib
@@ -1,4 +1,5 @@
 @article{makowski2019phenomenal,
+  doi = {10.3758/s13415-018-00681-0},
   title={Phenomenal, bodily and brain correlates of fictional reappraisal as an implicit emotion regulation strategy},
   author={Makowski, Dominique and Sperduti, Marco and Pelletier, J{\'e}r{\^o}me and Blond{\'e}, Phillippe and La Corte, Valentina and Arcangeli, Margherita and Zalla, Tiziana and Lemaire, St{\'e}phane and Dokic, J{\'e}r{\^o}me and Nicolas, Serge and others},
   journal={Cognitive, Affective, \& Behavioral Neuroscience},
