--- a/publication/nicolas2016can/cite.bib
+++ b/publication/nicolas2016can/cite.bib
@@ -1,4 +1,5 @@
 @article{nicolas2016can,
+  doi = {10.1484/j.eyhp.5.112940},
   title={Can mental fatigue be measured by Weber’s compass? Alfred Binet’s answer on the value of aesthesiometry (tactile sensitivity) as an objective measure of mental fatigue},
   author={Nicolas, Serge and Makowski, Dominique},
   journal={European Yearbook of the History of Psychology},
