--- a/publication/blonde2020medio/cite.bib
+++ b/publication/blonde2020medio/cite.bib
@@ -2,7 +2,7 @@
 title = "In Medio Stat Virtus: intermediate levels of mind wandering improve episodic memory encoding in a virtual environment",
 journal = "Psychological Research",
 volume = "",
-pages = "",
+pages = "1-13",
 year = "2020",
 issn = "",
 doi = "10.1007/s00426-020-01358-5",
